Update and rename 2024-12-13-how-to-install-app-psus..html to 2024-12-13-how-to-install-app-psus.html

--- a/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/2024-12-13-how-to-install-app-psus.html
+++ b/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/2024-12-13-how-to-install-app-psus.html
@@ -21,9 +21,9 @@ Before beginning, you might ask yourself what is an APP PSU and why do we need i
 
 <h3>What makes a PSU 'SAS Compliant'?</h3>
 SAS is a new upcoming standard on the PS2 which aims to unify how apps work and interact with each other on the PS2. When we talk about a SAS Compliant PSU we mean a PSU which has the following:<ul>
-<li>A 'prefix' to denote what 'type' of Application is in the package. Example: `SYS` for System-Apps, `GME` for Games, `APP` for Standard executables.</li>
+<li>A 'prefix' to denote what 'type' of Application is in the package. Example: <code>SYS</code> for System-Apps, <code>GME</code> for Games, <code>APP</code> for Standard executables.</li>
 <li>A 3D icon with it's type indicators which shows up in the OSDSYS (PS2's Browser) with separate Copy and Delete icons for the respective action.</li>
-<li>A `title.cfg` file which contains basic information about the app and makes it readable and executable from other apps such as Open PS2 Loader (OPL) and RetroLauncher.</li></ul>
+<li>A <code>title.cfg</code> file which contains basic information about the app and makes it readable and executable from other apps such as Open PS2 Loader (OPL) and RetroLauncher.</li></ul>
 ...and more. <br>
 
 Now that we know what we are working with let us move on to the 
@@ -33,7 +33,7 @@ You'll need:<ol>
 <li>A MemoryCard with atleast 1MB free space</li>
 <li>A way to launch LaunchELF/uLaunchELF/wLaunchELF</li>
 <li>A USB drive formatted as FAT32 with atleast 2MB free space</li>
-<li>A way to copy over the APP PSU downloaded from [SAS Apps Archive](https://ps2wiki.github.io/sas-apps-archive/)</li>
+<li>A way to copy over the APP PSU downloaded from <a href="https://ps2wiki.github.io/sas-apps-archive/">SAS Apps Archive</a></li>
 <li>Patience to follow the guide (Most important)</li></ol>
 
 <h3>Steps</h3>
@@ -41,67 +41,67 @@ You'll need:<ol>
 Once you are in LaunchELF, check the version to make sure the one you are using can extract PSUs.
 <div class="container">
     <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-1.png?raw=true">
-</div><br>
+</div></br>
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-2.png?raw=true">
-</div><br>
+</div></br>
 
 <h4>Step 2: Find the PSU</h4>
 Press 'Circle' to enterthe FileBrowser, then navigate to your FAT32 formatted USB 
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-3.png?raw=true">
-</div><br>
+</div></br>
 Press circle to enter it and look for the PSU(s) you want to install.  
-<br><div class="note">
+</br><div class="note">
 <strong>Tip:</strong> You can select multiple PSUs by pressing 'Cross' on each one of them a dot will appear before their name to let you know they are selected.
 </div> 
 
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-5.png?raw=true">
-</div><br>
+</div></br>
 Once you have highlighted the PSU(s) you want to install, Press 'R1' to bring up the Menu and navigate to 'Copy' and select it by pressing 'Circle'.
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-6.png?raw=true">
-</div><br>
+</div></br>
 <h4>Step 3: Installing</h4>
 Once you have successfully 'Copied' the file(s) (check the box on the right), we will now paste them.
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-7.png?raw=true">
-</div><br>
+</div></br>
 Navigate to your MemoryCard where you wish to install the App and press 'Circle' to Enter it.
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-8.png?raw=true">
-</div><br>
+</div></br>
 Now press 'R1' to open the Menu again and navigate to the <strong style="color: red">psuPaste</strong> option and press circle.
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-9.png?raw=true">
-</div><br>
+</div></br>
 Now relax for a while and let the PS2 copy stuff over. Don't press any buttons on the controller or unplug/remove your MC, USB drive, controller or any other accessory.
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-10.png?raw=true">
-</div><br>
+</div></br>
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-11.png?raw=true">
-</div><br>
+</div></br>
 Once the dialogue box disappears, the app should be installed on your MemoryCard.
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-12.png?raw=true">
-</div><br>
+</div></br>
 
 <h4>Step 4: Verification</h4>
 You can verify if everything is installed as expected. 
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-13.png?raw=true">
-</div><br>
+</div></br>
 Now reboot your PS2 and naviagte to the 'Browser' and 'MemoryCard 1 or 2' (depending on where you installed the app)
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-14.png?raw=true">
-</div><br>
+</div></br>
 
 <h4>Step 5: Rinse and Repeat!</h4>
 Congratulations! Now that you have learned how to install SAS Compliant APP PSUs you are free to explore whatever apps you may come across. 
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-15.png?raw=true">
-</div><br>
-If you come across somethimg which is not on the [SAS Apps Archive](https://ps2wiki.github.io/sas-apps-archive/), let us know and we will add it at the earliest! See ya! <div style="height: 20px" class="tenor-gif-embed" data-postid="7679297590304077870" data-share-method="host" data-aspect-ratio="1.56028" data-width="100%"><a href="https://tenor.com/view/hi-hello-smile-smiley-face-goofy-gif-7679297590304077870">Hi Hello Sticker</a>from <a href="https://tenor.com/search/hi-stickers">Hi Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+</div></br>
+If you come across somethimg which is not on the <a href="https://ps2wiki.github.io/sas-apps-archive/">SAS Apps Archive</a>, let us know and we will add it at the earliest! See ya! <div style="max-height: 20px" class="tenor-gif-embed" data-postid="7679297590304077870" data-share-method="host" data-aspect-ratio="1.56028" data-width="100%"><a href="https://tenor.com/view/hi-hello-smile-smiley-face-goofy-gif-7679297590304077870">Hi Hello Sticker</a>from <a href="https://tenor.com/search/hi-stickers">Hi Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
