--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ news: >-
   Open PS2 Loader v1.2.0-Beta-2182 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup>[↗]</sup></a> !
 
 tips: >-
-  You can launch FHDB with an FMCB card inserted, if you turn 'SkipHDD' in FMCB's OSDSYS settings 'OFF'.
+  Getting circular scratches on your discs? Your might want to check your laser-flex cable for bending, if it is a <a href="https://ps2wiki.github.io/get_started.html#Getting-started-with-PS2-Modding-1">Slim Console</a>!
 
 #########################
 
